@@ -1,3 +1,7 @@
+Mon Mar 22 15:32:15 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* contrib/parse_doc.pl: Fix handling of minimum word length.
+
 Sun Mar 21 15:19:00 1999  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* htlib/HtPack.cc (htPack): New.
@@ -222,7 +226,7 @@ Fri Mar  5 08:09:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 	generates a head record with punctuation intact, extra checks
 	for file "wrappers" & check for MS Word signature (no longer
 	defaults to catdoc), strip extra punct. from start & end of words,
-	rehyphenate text from PDFs
+	rehyphenate text from PDFs.
 
 Tue Mar  2 23:18:20 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
